--- a/src/app/modules/student/addstudentclass/addstudentclass.component.html
+++ b/src/app/modules/student/addstudentclass/addstudentclass.component.html
@@ -79,7 +79,7 @@
                     <input formControlName="Remarks" autocomplete="Off" #Remarks matInput [maxlength]="250">
                 </mat-form-field>
             </mat-grid-tile>
-            <mat-grid-tile [colspan]="1" [rowspan]="1" style="justify-content: start;" >
+            <mat-grid-tile [colspan]="1" [rowspan]="1"  >
                 <mat-checkbox formControlName="Active">
                 </mat-checkbox>&nbsp; Active
             </mat-grid-tile>
