--- a/src/app/modules/student/studentfeepayment/feereceipt/feereceipt.component.html
+++ b/src/app/modules/student/studentfeepayment/feereceipt/feereceipt.component.html
@@ -59,8 +59,8 @@
             <div fxLayout="row" fxLayoutAlign="space-between center">
                 <span>
                     Received with thanks from <b>{{studentInfoTodisplay.StudentName}}</b>,
-                    Class : {{studentInfoTodisplay.StudentClassName}} - Sec. {{studentInfoTodisplay.SectionName}} -
-                    Roll no. {{studentInfoTodisplay.RollNo}}.
+                    Class : {{studentInfoTodisplay.StudentClassName}}, Sec - {{studentInfoTodisplay.SectionName}},
+                    Roll no. - {{studentInfoTodisplay.RollNo}}.
                 </span>
             </div>
             <div style="border-collapse: collapse; border: 1px solid lightgray;">
