--- a/src/app/modules/classes/school-fee-types/school-fee-types.component.html
+++ b/src/app/modules/classes/school-fee-types/school-fee-types.component.html
@@ -90,7 +90,7 @@
         <div style="width:100%;background-color: lightgray;font-size: medium;padding: 10px;margin:15px 15px 15px 0px"> Below variables can be
             applied in the formula.
         </div>
-        <div>StudentName, FeeName, Month*, MonthName, ClassName, SectionName, Amount</div>
+        <div>StudentName, FeeName,Fee Category, Fee Sub-category, Month*, MonthName, ClassName, SectionName, Amount</div>
         <div>* Month format: Year + month. Eg. 'Month' for the month of Jan 2021 is 202100, for Feb 2021 is 202101 and
             so on..</div>
     </div>
