--- a/src/app/modules/schoolreports/studentprofilereport/studentprofilereport.component.html
+++ b/src/app/modules/schoolreports/studentprofilereport/studentprofilereport.component.html
@@ -3,7 +3,108 @@
         <div><strong>Stduent Profile Report</strong></div>
     </div>
     <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
-    <!-- <alert></alert> -->
+    <div style="padding: 15px;">
+        <div style="width: 100%;">
+            <form [formGroup]="searchForm">
+                <mat-form-field appearance="outline" [style.width.px]="150">
+                    <mat-label>Evaluation Type</mat-label>
+                    <mat-select formControlName="searchEvaluationTypeId">
+                        <mat-option *ngFor="let item of EvaluationTypes" [value]="item.MasterDataId">
+                            {{item.MasterDataName}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <mat-form-field [style.width.px]="250" appearance="outline">
+                    <mat-label>Name-class-section-roll no</mat-label>
+                    <input type="text" matInput formControlName="searchStudentName" [matAutocomplete]="auto">
+                    <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
+                        <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+                            {{option.Name}}
+                        </mat-option>
+                    </mat-autocomplete>
+                </mat-form-field>
+                <mat-form-field appearance="outline" [style.width.px]="200">
+                    <mat-label>Exam/Test</mat-label>
+                    <mat-select formControlName="searchExamId">
+                        <mat-option value="0">select</mat-option>
+                        <mat-option *ngFor="let item of Exams" [value]="item.ExamId">{{item.ExamName}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <button [disabled]="loading" mat-raised-button color="accent" (click)="GetStudentEvaluation()">
+                    <mat-icon>search</mat-icon>
+                </button>
+            </form>
+            <div id="printsection">
+                <div style="width:100%; display: flex;flex-direction: column;">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+                <mat-table #table [dataSource]="dataSource">
+                    <ng-container matColumnDef="Id">
+                        <mat-header-cell *matHeaderCellDef>
+                        </mat-header-cell>
+                        <mat-cell *matCellDef="let element">
+                            {{element.Id}}
+                        </mat-cell>
+                    </ng-container>
+                    <ng-container matColumnDef="Description">
+                        <mat-header-cell *matHeaderCellDef>
+                        </mat-header-cell>
+                        <mat-cell *matCellDef="let element"
+                            style="display:flex; flex-direction: column;justify-content: start;">
+                            <span style="width: 100%;padding: 15px 15px 10px 0px;"> {{element.Description}}</span>
+                            <span
+                                style="width: 100%;margin:0px 15px 15px 15px; padding: 10px;border: 1px solid lightgray;"
+                                *ngIf="element.ClassEvaluationOptions.length==0">
+                                {{element.Detail}}
+                            </span>
+                        </mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="RatingId">
+                        <mat-header-cell *matHeaderCellDef>
+                        </mat-header-cell>
+                        <mat-cell *matCellDef="let element">
+                            <span *ngIf="element.MultipleAnswer==1">
+                                <mat-checkbox [disabled]="true"
+                                    *ngFor="let item of element.ClassEvaluationOptions;let i=index"
+                                    (click)="$event.stopPropagation()" name="options_{{i}}"
+                                    [value]="item.AnswerOptionsId" [checked]="item.checked"
+                                    [(ngModel)]="item.AnswerOptionsId">
+                                </mat-checkbox>
+                            </span>
+                            <span *ngIf="element.MultipleAnswer==0">
+                                <mat-radio-group [disabled]="true" [(ngModel)]="element.RatingId">
+                                    <mat-radio-button style="margin-right: 15px;"
+                                        *ngFor="let item of element.ClassEvaluationOptions;let i=index"
+                                        [value]="item.AnswerOptionsId">
+                                        {{item.Title}}
+                                    </mat-radio-button>
+                                </mat-radio-group>
+                            </span>
+                        </mat-cell>
+                    </ng-container>
+                    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                    <mat-row *matRowDef="let row; columns: displayedColumns;let indx=index" class="element-row">
+                    </mat-row>
+                </mat-table>
+                <div style="display: flex;flex-direction: row;justify-content: center;">
+                    <button [disabled]="loading" matTooltip="print" style="margin: 15px;" printSectionId="printsection"
+                        [useExistingCss]="true" ngxPrint class="mat-raised-button">
+                        <mat-icon>print</mat-icon>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- <div>
+    <div style="padding:15px 15px 10px 15px;">
+        <div><strong>Stduent Profile Report</strong></div>
+    </div>
+    <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
     <div style="padding: 15px 15px 15px 0px;">
         <div style="width: 100%;">
             <form [formGroup]="searchForm">
@@ -20,12 +121,7 @@
                     <mat-icon>search</mat-icon>
                 </button>
             </form>
-            <!-- <div *ngFor="let item of Categories" ngIf="StudentEvaluationList.length>0">
-                <span style="font-size: large;">{{item.MasterDataName}}</span>
-                <li *ngFor="let inner of StudentEvaluationList|myfilter:item ">
-                    {{inner.Description}}
-                </li>
-            </div> -->
+           
             <mat-table #table [dataSource]="dataSource" id="printSection">
 
                 <ng-container matColumnDef="CategoryName">
@@ -96,4 +192,4 @@
         </div>
 
     </div>
-</div>
+</div> -->
