--- a/src/app/modules/studentexam/examslot/examslot.component.scss
+++ b/src/app/modules/studentexam/examslot/examslot.component.scss
@@ -8,3 +8,19 @@ button{
 mat-cell:first-of-type {
     padding-left: 0px;
 }
+.mat-column-ExamSlotId{
+    flex:1 1 70px;
+}
+.mat-column-ExamName,
+.mat-column-ExamDate,
+.mat-column-SlotName,
+.mat-column-StartTime,
+.mat-column-EndTime
+{
+    flex:1 1 150px;
+}
+.mat-column-Sequence,
+.mat-column-Active,
+.mat-column-Action{
+    flex:1 1 100px;
+}
